packages/asm-grammar/test/corpus/pointers_and_vars.txt
====================================
register pointer & variable operands
====================================

mov &r1, r2
mov r3, &r4
mov !FROG, r1
mov r2, !FROG

---
(source_file
    (newline)
    (instruction
      (mnemonic)
      (operands
        (register_ptr
          (register))
        (register)))
    (newline)
    (instruction
      (mnemonic)
      (operands
        (register)
        (register_ptr
          (register))))
    (newline)
    (instruction
      (mnemonic)
      (operands
        (variable
          (identifier))
        (register)))
    (newline)
    (instruction
      (mnemonic)
      (operands
        (register)
        (variable
          (identifier))))
    (newline))
